--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -7,10 +7,28 @@
 html,
 body,
 #root {
-  min-width: 343px;
-  min-height: 100vh;
-
+  width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+
+  font-family: 'Plus Jakarta Sans', sans-serif;
+
+  main {
+    width: 100%;
+    padding-bottom: 30px;
+    background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%);
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    width: 1100px;
+    display: flex;
+    justify-content: center;
+
+    .container {
+      width: 1100px;
+    }
+  }
 }
