--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -7,8 +7,22 @@
 html,
 body,
 #root {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   font-family: 'Plus Jakarta Sans', sans-serif;
+
+  main {
+    background: linear-gradient(180deg, #ffffff 0%, #f0f1ff 100%);
+  }
+
+  @media (min-width: 768px) {
+    main {
+      width: 100%;
+    }
+  }
 }
