--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -42,6 +42,12 @@ footer {
 
   @media (min-width: 768px) {
     .container {
+      width: 689px;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    .container {
       width: 1100px;
     }
   }
