--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -39,6 +39,12 @@ header {
 
   @media (min-width: 768px) {
     .container {
+      width: 689px;
+    }
+  }
+
+  @media (min-width: 1440px) {
+    .container {
       width: 1100px;
     }
   }
